# insurgent

./: .editorconfig  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: ProjectYAML.md
example/: Makefile  project.yaml
example/sources/: Program.cpp
insurgent/: __init__.py  __main__.py  build.py  config.py  logger.py  scorch.py  shell.py  terminal.py  toolchain.py  version.py
insurgent/Logging/: logger.py  terminal.py
insurgent/Meta/: config.py  version.py
insurgent/Shell/: Completer.py  builtins.py  completions.py  config.py  executor.py  highlighting.py  history.py  shell.py
insurgent/TUI/: box.py  table.py  text.py  theme.py
tests/: conftest.py  test_build.py  test_completions.py  test_conf.py  test_example.py  test_shell.py  test_tui.py
