[build-system]
requires = ["setuptools ~= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurgent"
description = "A build environment and dev shell for make-based C/C++ projects."
authors = [
    { name = "bumblebee777", email = "bumbelbee437167@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.scripts]
insurgent = "insurgent:main"
int = "insurgent:main"

[tool.setuptools]
packages = ["insurgent"]

[tool.setuptools.dynamic]
version = { attr = "insurgent.version.version" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"insurgent" = ["requirements.txt"]